feat(Photo Editor Pro): add `Show AI progress` patch
Signed-off-by: hxreborn <hxreborn@duck.com>